--- a/.github/workflows/telegram-notify.yml
+++ b/.github/workflows/telegram-notify.yml
@@ -3,21 +3,18 @@ name: Notify Telegram on Push
 on:
   push:
     branches:
-      - main  # Change to the branch you want notifications for
+      - main # You can change this to the branch you want to monitor
 
 jobs:
   notify:
     runs-on: ubuntu-latest
+
     steps:
       - name: Send Telegram Notification
         env:
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_TO }}
         run: |
-          curl -X POST "https://api.telegram.org/bot$TELEGRAM_BOT_TOKEN/sendMessage" \
-          -H "Content-Type: application/json" \
-          -d '{
-                "chat_id": "$TELEGRAM_CHAT_ID",
-                "text": "🚀 Push to GitHub:\nRepository: ${{ github.repository }}\nBranch: ${{ github.ref_name }}\nCommit: ${{ github.event.head_commit.message }}\nAuthor: ${{ github.event.head_commit.author.name }}",
-                "parse_mode": "Markdown"
-              }'
+          curl -s -X POST https://api.telegram.org/bot${{ env.TELEGRAM_TOKEN }}/sendMessage \
+          -d chat_id=${{ env.TELEGRAM_CHAT_ID }} \
+          -d text="New push to the repository: ${{ github.repository }} by ${{ github.actor }}. Commit message: ${{ github.event.head_commit.message }
