--- a/.github/workflows/telegram-notify.yml
+++ b/.github/workflows/telegram-notify.yml
@@ -15,6 +15,6 @@ jobs:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          curl -s -X POST https://api.telegram.org/bot${{ env.TELEGRAM_BOT_TOKEN }}/sendMessage \
+          curl -s -X POST https://api.telegram.org/bot${{ env.TELEGRAM_TOKEN }}/sendMessage \
           -d chat_id=${{ env.TELEGRAM_CHAT_ID }} \
-          -d text="New push to the repository: ${{ github.repository }} by ${{ github.actor }}. Commit message: ${{ github.event.head_commit.message }
+          -d text="New push to the repository: ${{ github.repository }} by ${{ github.actor }}. Commit message: ${{ github.event.head_commit.message }}"
