--- a/.github/workflows/telegram-notify.yml
+++ b/.github/workflows/telegram-notify.yml
@@ -15,7 +15,6 @@ jobs:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage" \
-          -d "chat_id=${TELEGRAM_CHAT_ID}" \
-          -d "text=🚀 *Push to GitHub:*%0A*Repository:* ${{ github.repository }}%0A*Branch:* ${{ github.ref_name || github.ref }}%0A*Commit:* ${{ github.event.head_commit.message || 'No commit message provided' }}%0A*Author:* ${{ github.actor }}" \
-          -d "parse_mode=Markdown" || echo "Failed to send Telegram notification"
+          curl -s -X POST https://api.telegram.org/bot${{ env.TELEGRAM_TOKEN }}/sendMessage \
+          -d chat_id=${{ env.TELEGRAM_CHAT_ID }} \
+          -d text="**New push to the repository:** ${{ github.repository }} by ${{ github.actor }}. Commit message: ${{ github.event.head_commit.message }}"
