--- a/.github/workflows/telegram-notify.yml
+++ b/.github/workflows/telegram-notify.yml
@@ -17,4 +17,4 @@ jobs:
         run: |
           curl -s -X POST https://api.telegram.org/bot${{ env.TELEGRAM_TOKEN }}/sendMessage \
           -d chat_id=${{ env.TELEGRAM_CHAT_ID }} \
-          -d text="**New push to the repository:** ${{ github.repository }} by ${{ github.actor }}. Commit message: ${{ github.event.head_commit.message }}"
+          -d text="New push to the repository: ${{ github.repository }} by ${{ github.actor }}. Commit message: ${{ github.event.head_commit.message }}"
