--- a/.github/workflows/telegram-notify.yml
+++ b/.github/workflows/telegram-notify.yml
@@ -17,5 +17,5 @@ jobs:
         run: |
           curl -s -X POST https://api.telegram.org/bot${{ env.TELEGRAM_TOKEN }}/sendMessage \
           -d chat_id=${{ env.TELEGRAM_CHAT_ID }} \
-          -d "text=🚀 *Push to GitHub:*%0A  *Repository:* ${{ github.repository }}%0A  *Branch:* ${{ github.ref_name || github.ref }}%0A  *Commit:* ${{ github.event.head_commit.message || 'No commit message provided' }}%0A  *Author:* ${{ github.actor }}" \
+          -d "text=🚀 *New push to the repository:*%0A  *Repository:* ${{ github.repository }}%0A  *Author:* ${{ github.actor }}%0A  *Commit message:* ${{ github.event.head_commit.message }}" \
           -d "parse_mode=Markdown" || echo "Failed to send Telegram notification"
