--- a/.github/workflows/telegram-notify.yml
+++ b/.github/workflows/telegram-notify.yml
@@ -17,5 +17,4 @@ jobs:
         run: |
           curl -s -X POST https://api.telegram.org/bot${{ env.TELEGRAM_TOKEN }}/sendMessage \
           -d chat_id=${{ env.TELEGRAM_CHAT_ID }} \
-          -d "text=🚀 *New push to the repository:*%0A  *Repository:* ${{ github.repository }}%0A  *Author:* ${{ github.actor }}%0A  *Commit message:* ${{ github.event.head_commit.message }}" \
-          -d "parse_mode=Markdown" || echo "Failed to send Telegram notification"
+          -d text="```🚀 New push to the repository: ${{ github.repository }} by ${{ github.actor }}. Commit message: ${{ github.event.head_commit.message }}```"
