--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
+    "vue_ecommerce": "file:",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
