--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "@heroicons/vue": "^2.2.0",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
