--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@heroicons/vue": "^2.2.0",
     "pinia": "^2.2.6",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "vue": "^3.5.12",
     "vue_ecommerce": "file:",
     "vue-router": "^4.5.0"
