--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@heroicons/vue": "^2.2.0",
+    "firebase": "^11.1.0",
     "pinia": "^2.2.6",
     "tailwind-scrollbar-hide": "^1.1.7",
     "vue": "^3.5.12",
