--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.20",
     "jsdom": "^25.0.1",
     "postcss": "^8.4.49",
+    "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "^3.4.17",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4",
