--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "@cloudflare/kv-asset-handler": "^0.4.0",
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@heroicons/vue": "^2.2.0",
     "firebase": "^11.1.0",
@@ -17,7 +18,8 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "vue": "^3.5.12",
     "vue_ecommerce": "file:",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "worktop": "^0.7.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
