change worker and wrangler file

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@cloudflare/kv-asset-handler": "^0.4.0",
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@heroicons/vue": "^2.2.0",
+    "@hono/node-server": "^1.14.0",
     "firebase": "^11.1.0",
+    "hono": "^4.7.6",
     "pinia": "^2.2.6",
     "tailwind-scrollbar-hide": "^1.1.7",
     "vue": "^3.5.12",
