--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,8 +7,8 @@ compatibility_date = "2025-04-10"
 command = "npm run build"
 
 [site]
-bucket = "./dist"
-entry-point = "."
+bucket = "./dist"  # Path to your static site files (built files)
+# Remove entry-point here since you're serving static files with Workers Sites
 
 [env.production]
 # Uncomment and configure routes if deploying to a specific domain
